# agent-atlas

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md  SKILL.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
agent_atlas/: __init__.py  chrome_profile.py  cli.py  config.py  doctor.py  li_status.py  linkedin_mcp.py  opencli_status.py  probe.py  rdt_status.py  smoke.py  update_check.py
agent_atlas/channels/: __init__.py  base.py  exa.py  github.py  rss.py  social.py  web.py  youtube.py
agent_atlas/skill/: SKILL.md
agent_atlas/skill/references/: career.md  dev.md  search.md  social.md  video.md  web.md
docs/: README_tr.md  channels.md  install.md  platforms.md  publish.md  tier1.md  troubleshooting.md  update.md
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-07-17-linkedin-reach-parity.md
docs/superpowers/specs/: 2026-07-17-linkedin-reach-parity-design.md
li-cli/: README.md  pyproject.toml
li-cli/li_cli/: __init__.py  __main__.py  auth.py  browser.py  chrome_paths.py  cli.py  client.py  constants.py  exceptions.py
li-cli/li_cli/commands/: __init__.py  _common.py  auth.py  jobs.py  people_search.py  profile.py
li-cli/li_cli/parsers/: __init__.py  people_search.py  profile.py
li-cli/tests/: test_parsers.py
tests/: test_core.py
