[project]
name = "li-cli"
version = "0.1.0"
description = "LinkedIn CLI — cookie auth, headless browser, people search, jobs, profiles"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "browser-cookie3>=0.19",
    "click>=8.0",
    "httpx>=0.27",
    "playwright>=1.61.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
li = "li_cli.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["li_cli"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
